--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,12 @@
 # For details about the syntax of this file, see
 # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
 
-# Copyright 2021-2023 The MathWorks, Inc.
+# Copyright 2025 The MathWorks, Inc.
 
 name: CI using MATLAB
 
 on:
   push:
-    branches: [ master ]
     paths-ignore:
       - 'docs/**'
       - '**.md'
@@ -25,7 +24,6 @@ on:
       - '**.xml'
 
   pull_request:
-    branches: [ master ]
     paths-ignore:
       - 'docs/**'
       - '**.md'
@@ -33,6 +31,9 @@ on:
       - '**.svg'
       - '**.txt'
       - '**.xml'
+
+  schedule:
+    - cron:  '55/61 20/25 1/6 * *' # schedule a weekly-ish build
 
 jobs:
 
@@ -62,14 +63,14 @@ jobs:
     steps:
 
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup MATLAB
-        uses: matlab-actions/setup-matlab@v1
+        uses: matlab-actions/setup-matlab@v2
         with:
           release: R2024b
 
       - name: Run tests
-        uses: matlab-actions/run-command@v1
+        uses: matlab-actions/run-command@v2
         with:
           command: openProject(pwd); eVTOLdroneTestRunner;
