--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,27 +37,10 @@ on:
 
 jobs:
 
-  job-check-project:
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Setup MATLAB
-        uses: matlab-actions/setup-matlab@v2
-        with:
-          release: R2024b
-
-      - name: Run tests
-        uses: matlab-actions/run-command@v2
-        with:
-          command: openProject(pwd); DroneProjectRuntestsCheckProject;
-
+ 
   job-run-tests:
 
     # This job starts only if the previous job is successful.
-    needs: job-check-project
 
     runs-on: ubuntu-latest
     steps:
@@ -69,6 +52,19 @@ jobs:
         uses: matlab-actions/setup-matlab@v2
         with:
           release: R2024b
+          cache: true
+          products: |
+            Aerospace_Blockset
+            Aerospace_Toolbox
+            Control_System_Toolbox
+            Simscape
+            Simulink
+            Simulink_Control_Design
+            Stateflow
+            UAV_Toolbox
+            Simscape_Driveline
+            Simscape_Electrical
+            Robust_Control_Toolbox            
 
       - name: Run tests
         uses: matlab-actions/run-command@v2
